# SolarDrive

./: .dockerignore  .env  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
config/: config.local.yaml  config.yaml
deploy/: entrypoint.sh  nginx.conf
docs/: API.md  bugfix-content-gc-delete-2026-06-21.md  bugfix-jwt-unit-tests-2026-06-21.md
reports/: 2026-06-21-docker-after-fd-fix.md  2026-06-21-docker-baseline.md  2026-06-21-docker-keep-alive.md
scripts/: demo.sh  smoke_test.sh
src/: main.cpp
src/api/: auth_handler.cpp  auth_handler.h  download_handler.cpp  download_handler.h  file_handler.cpp  file_handler.h  file_upload_ops.cpp  file_upload_ops.h  folder_handler.cpp  folder_handler.h  multipart_upload_handler.cpp  multipart_upload_handler.h  route_registry.cpp  route_registry.h  share_handler.cpp  share_handler.h  upload_handler.cpp  upload_handler.h  upload_limits.h
src/auth/: access_control.cpp  access_control.h  auth_middleware.cpp  auth_middleware.h  jwt.cpp  jwt.h  request_auth.h  user_dao.cpp  user_dao.h
src/cache/: rate_limiter.cpp  rate_limiter.h  redis_client.cpp  redis_client.h
src/config/: config.cpp  config.h
src/http/: http_parser.cpp  http_parser.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  http_router.cpp  http_router.h  query_utils.h  static_handler.cpp  static_handler.h
src/metadata/: content_dao.cpp  content_dao.h  content_gc.cpp  content_gc.h  db_pool.cpp  db_pool.h  file_dao.cpp  file_dao.h  folder_dao.cpp  folder_dao.h  schema.cpp  schema.h  share_dao.cpp  share_dao.h
src/monitor/: metrics.cpp  metrics.h
src/network/: acceptor.cpp  acceptor.h  buffer.h  channel.cpp  channel.h  epoll_poller.cpp  epoll_poller.h  event_loop.cpp  event_loop.h  event_loop_thread.cpp  event_loop_thread.h  event_loop_thread_pool.cpp  event_loop_thread_pool.h  log.cpp  log.h  socket.h  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h  timer.cpp  timer.h  timer_queue.cpp  timer_queue.h  timestamp.h
src/storage/: object_store.cpp  object_store.h
src/ws/: websocket.cpp  websocket.h  ws_handler.cpp  ws_handler.h  ws_session.cpp  ws_session.h  ws_upgrade.cpp  ws_upgrade.h
test/: CMakeLists.txt
test/auth_test/: test_auth_middleware.cpp  test_jwt.cpp
test/cache_test/: test_rate_limiter.cpp
test/http_test/: http_test_util.h  test_http_parser.cpp  test_http_request.cpp  test_http_response.cpp  test_http_router.cpp  test_static_handler.cpp
test/storage_test/: test_object_store.cpp
test/ws_test/: test_websocket.cpp
web/: api.js  app.js  auth.js  icons.js  index.html  login.html  metrics.html  metrics.js  receive.html  receive.js  session.js  share.html  share.js  style.css  ui.js
